<resources>
    <string name="app_name">Vacuum Fitness</string>
    <string name="main_notification_channel_name" translatable="false">Notification</string>
    <string name="youtube_web_url" translatable="false">https://www.youtube.com/watch?v=</string>
    <string name="youtube_app_url" translatable="false">vnd.youtube:</string>
    <string name="how_to_exercise_key">6L8c4JUqSjs</string>
    <string name="how_to_app_key">epI3rvNUn0s</string>
    <string name="youtube_error">Something went wrong. Go to our channel.</string>
    <string name="eagle_key">KwxPCGvn3AU</string>
    <string name="armadillo_key">7-Q4_TrRWEU</string>
    <string name="bear_key">IjGnTQAVw_0</string>
    <string name="cobra_key">KwxPCGvn3AU</string>
    <string name="hedgehog_key">h_MRemF-HeU</string>
    <string name="kangaroo_key">W1YlnKD1Ep8</string>
    <string name="mantis_key">N7dl8P1D8kI</string>
    <string name="nightshade_key">G-jnDlJMSX8</string>
    <string name="orchid_key">8eXIB4n-XII</string>
    <string name="peacock_key">jHLrP8AXR9M</string>
    <string name="polar_fox_key">M3fhEMDIr0s</string>
    <string name="prayer_key">E4DBzlNRBj8</string>
    <string name="rosebush_key">Gyj50Ksa7yA</string>
    <string name="silent_tree_key">MvbMZr1IMNM</string>
    <string name="sun_king_key">Eqz1em17AVg</string>
    <string name="tamarin_key">HIBZUj_tsU4</string>
    <string name="tiger_key">b05V2NC3qpo</string>
    <string name="motivator_1">Always keep on track!</string>
    <string name="motivator_2">Never give up!</string>
    <string name="motivator_3">You are one of the best!</string>
    <string name="motivator_4">Vacuum Fitness believes in you</string>
    <string name="motivator_5">Your training is waiting you.</string>
    <string name="motivators_json">motivators.json</string>
    <string name="cd_about">Know more about this app</string>
    <string name="cd_back_button">Go back</string>
    <string name="cd_belly_image">Image of a tones belly</string>
    <string name="cd_add_playlist">Add new playlist</string>
    <string name="cd_add_song">Add music to playlist</string>
    <string name="cd_add_training">Add new training</string>
    <string name="cd_add_exercise">Add new excercise to training</string>
    <string name="cd_customize_music">Customize your music</string>
    <string name="cd_customize_training">Customize your Training</string>
    <string name="cd_decrease">Decrease exercises</string>
    <string name="cd_delete_icon">Delete</string>
    <string name="cd_drag">Drag and Drop</string>
    <string name="cd_how_to_app">Button opens a video that shows how to use the app</string>
    <string name="cd_how_to_exercise">Button opens a video that shows how to exercise</string>
    <string name="cd_imprint">Button opens the imprint of the app</string>
    <string name="cd_increase">Increase exercises</string>
    <string name="cd_more_options">More options</string>
    <string name="cd_music_button">Mute the music</string>
    <string name="cd_pause_button">Pause and Start the training</string>
    <string name="cd_position_image">Image of the position</string>
    <string name="cd_start_training">Start a training</string>
    <string name="cd_video_button">See a video about the current position</string>
    <string name="start_training">Start Training</string>
    <string name="customize_training">CustomizeTraining</string>
    <string name="customize_music">Customize Music</string>
    <string name="how_to">About</string>
    <string name="about_us">About Us</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="choose_pref_playlist">Choose your preferred Playlist</string>
    <string name="choose_pref_training">Choose your preferred Training</string>
    <string name="choose_pref_level">Choose your preferred Level</string>
    <string name="reduce_music_for_voice">Duck music volume for voice command</string>
    <string name="voice_command_toggle">Voice commands</string>
    <string name="visual_command_toggle">Visual commands</string>
    <string name="prefer_day">Prefer the day training</string>
    <string name="prepare">Take position</string>
    <string name="inhale">Inhale</string>
    <string name="exhale">Exhale</string>
    <string name="vacuum">Make the vacuum</string>
    <string name="relax">Relax</string>
    <string name="change">Relax and get ready to change position</string>
    <string name="finish">Relax, congratulations you finished the training</string>
    <string name="key_playlist_name" translatable="false">playlist-name</string>
    <string name="key_playlist_category" translatable="false">playlist-category</string>
    <string name="silent_tree">Silent Tree</string>
    <string name="eagle">Eagle</string>
    <string name="mantis">Mantis</string>
    <string name="armadillo">Armadillo</string>
    <string name="prayer">Prayer</string>
    <string name="tamarin">Tamarin</string>
    <string name="orchid">Orchid</string>
    <string name="bear">Bear</string>
    <string name="sun_king">Sun King</string>
    <string name="peacock">Peacock</string>
    <string name="tiger">Tiger</string>
    <string name="cobra">Cobra</string>
    <string name="hedgehog">Hedgehog</string>
    <string name="polar_fox">Polar Fox</string>
    <string name="kangaroo">Kangaroo</string>
    <string name="rosebush">Rosebush</string>
    <string name="nightshade">Nightshade</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="random_training">Random Training</string>
    <string name="no_music">No music</string>
    <string name="prepare_title">Prepare your Training</string>
    <string name="how_much_exercises">How much \n exercises?</string>
    <string name="time">Time:</string>
    <string name="default_exercise_count" translatable="false">3</string>
    <string name="training_title">Training:</string>
    <string name="level_title">Level:</string>
    <string name="minutes_short">min</string>
    <string name="start_button">Start</string>
    <string name="music_title">Music:</string>
    <string name="exercise">Exercise:</string>
    <string name="no_internet_connection">Please connect to internet and try again.</string>
    <string name="no_exercise_video">For this exercise is no video available.</string>
    <string name="customize_training_title">Customize Training</string>
    <string name="empty_customize_trainings">You still don\'t have customized trainings. Start by adding a training.</string>
    <string name="exercises">Exercises:</string>
    <string name="empty_training_detail">This training still don\'t have exercises. Start by adding a exercise.</string>
    <string name="all_exercises">All Exercises</string>
    <string name="add_training">Add Training</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="tut_conclusion">Try to train like this in any position. In some positions this becomes more difficult than in others, but you will soon make progress. \10 \10 Try to exercise at least 3 times a week. Optimal are 4-5 times with 3-5 exercises per workout. It is best not to exercise on a full stomach, for example before breakfast or before dinner. \10 \10 That\'s it, enjoy the training.</string>
    <string name="tut_intro">Vacuum Fitness has an isometric contraction of the abdominal muscles to its goal. This means that the abdominal muscles are tense without moving them. This gives you more control over your abdominal muscles. The abdomen gets defined, the back is spared at the same time and a healthy posture is promoted. In addition, Vacuum Fitness improves your breathing.</string>
    <string name="tut_prequereties">The Vacuum Fitness app shows them different positions, but breathing is always the same. Always do the exercises as described below.</string>
    <string name="tut_step_1">1. At the beginning you take the position indicated by the Vacuum Fitness app. Breathe normally until the app gives you the command to inhale.</string>
    <string name="tut_step_2">2. On the command Inhale, take a deep breath and open your chest.</string>
    <string name="tut_step_3">3. Exhale on the exhale command, leaving your chest open.</string>
    <string name="tut_step_4">4. Again comes the command inhale, breathe deeply again and try to open the chest even further.</string>
    <string name="tut_step_5">5. At the next command exhale, try to exhale all air. Keep your chest open as far as possible.</string>
    <string name="tut_step_6">6. Now the app gives them the command vacuum, press out all the air that could still be in the stomach, imagine the navel must touch the spine, and hold the position. For beginners this is 15 seconds, for medium 20 seconds and for advanced 25 seconds.</string>
    <string name="tut_step_7">7. Wait until the app gives you the command Rest. Then you can breathe again, but hold the position, there is a second set. After the vacuum in the second set, the app gives the command Rest and prepare to change position, meaning that you can slowly leave the position and relax your muscles.</string>
    <string name="tut_title">Vacuum Fitness - Shape your belly</string>
    <string name="positive_answer">OK</string>
    <string name="negative_answer">Cancel</string>
    <string name="cust_menu_title">Create Training</string>
    <string name="cust_menu_hint">Training Name</string>
    <string name="cust_label_title">Day</string>
    <string name="cust_label_description">If you want, you can assign the training to a specific day</string>
    <string name="customize_label">Custom Label (max. 3 letters)</string>
    <string name="customize_label_hint">Label...</string>
    <string name="no_name">Training must have a name.</string>
    <string name="delete_answer">Delete</string>
    <string name="delete_training_title">Delete Training</string>
    <string name="delete_question">Are you sure you want to delete %1$s?</string>
    <string name="delete_exercise_title">Delete Exercise</string>
    <string name="custom_playlist_hint">Playlist Name...</string>
    <string name="custom_playlist_dialog_title">Create Playlist</string>
    <string name="no_playlist_name">Playlist must have a name.</string>
    <string name="delete_song_title">Delete Song from Playlist</string>
    <string name="delete_playlist_title">Delete Playlist</string>
    <string name="mon_label">Mon</string>
    <string name="tue_label">Tue</string>
    <string name="wed_label">Wed</string>
    <string name="thu_label">Thu</string>
    <string name="fri_label">Fri</string>
    <string name="sat_label">Sat</string>
    <string name="sun_label">Sun</string>
    <string name="all_music">All my Music</string>
    <string name="various_artists">Various Artists</string>
    <string name="empty_customize_playlist">You still don\'t have customized music. Start by adding a playlist.</string>
    <string name="customize_music_title">Customize Music</string>
    <string name="songs_count">Songs:</string>
    <string name="empty_playlist_detail">This playlist still don\'t have songs. Start by adding a song.</string>
    <string name="playlist_duration">Playlist Duration:</string>
    <string name="zero_time" translatable="false">00:00</string>
    <string name="permission_denied">You must give the permission to customize music.</string>
    <string name="no_music_on_device">We did not find any music on your device.</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="add_song">Add Song</string>
    <string name="add_widget">Add widget</string>
    <string name="default_motivator_string">We guess your belly deserves a quick training.</string>
    <string name="how_to_exercise">How to\nExercise</string>
    <string name="how_to_use_app">How to use\nthe App</string>
    <string name="video_tutorial">Video Tutorial</string>
</resources>