<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_custom_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:ems="10"
        android:inputType="textCapWords"
        android:maxLength="30"
        android:hint="@string/cust_menu_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_delete_icon"
        android:contentDescription="@string/cd_delete_icon"
        android:layout_width="@dimen/delete_icon_size"
        android:layout_height="@dimen/delete_icon_size"
        android:layout_marginStart="@dimen/s_margin"
        android:layout_marginEnd="@dimen/s_margin"
        android:src="@drawable/ic_delete"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_custom_name"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tv_label_title"
        style="@style/dialog_titles"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/cust_label_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_custom_name" />

    <TextView
        android:id="@+id/tv_label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/s_margin"
        android:text="@string/cust_label_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_title" />

    <TextView
        android:id="@+id/tv_label_mon"
        style="@style/cust_label_shortcuts"
        android:layout_margin="@dimen/margin"
        android:text="@string/mon_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_description" />

    <TextView
        android:id="@+id/tv_label_tud"
        style="@style/cust_label_shortcuts"
        android:layout_margin="@dimen/margin"
        android:text="@string/tue_label"
        app:layout_constraintStart_toEndOf="@+id/tv_label_mon"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_description" />

    <TextView
        android:id="@+id/tv_label_wen"
        style="@style/cust_label_shortcuts"
        android:layout_margin="@dimen/margin"
        android:text="@string/wed_label"
        app:layout_constraintStart_toEndOf="@+id/tv_label_tud"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_description" />

    <TextView
        android:id="@+id/tv_label_thu"
        style="@style/cust_label_shortcuts"
        android:layout_margin="@dimen/margin"
        android:text="@string/thu_label"
        app:layout_constraintStart_toEndOf="@+id/tv_label_wen"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_description" />

    <TextView
        android:id="@+id/tv_label_fri"
        style="@style/cust_label_shortcuts"
        android:layout_margin="@dimen/margin"
        android:text="@string/fri_label"
        app:layout_constraintStart_toEndOf="@+id/tv_label_thu"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_description" />

    <TextView
        android:id="@+id/tv_label_sat"
        style="@style/cust_label_shortcuts"
        android:layout_margin="@dimen/margin"
        android:text="@string/sat_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_mon" />

    <TextView
        android:id="@+id/tv_label_sun"
        style="@style/cust_label_shortcuts"
        android:layout_margin="@dimen/margin"
        android:text="@string/sun_label"
        app:layout_constraintStart_toEndOf="@id/tv_label_sat"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_mon" />

</androidx.constraintlayout.widget.ConstraintLayout>