<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_belly_image"
        android:scaleType="centerCrop"
        android:src="@drawable/how_to_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/how_to_exercise"
        style="@style/start_buttons_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/start_image_height"
        android:layout_marginStart="@dimen/xxl_margin"
        android:layout_marginTop="@dimen/xl_margin"
        android:layout_marginEnd="@dimen/xxl_margin"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/cd_how_to_exercise"
        android:elevation="@dimen/button_elevation"
        android:text="@string/how_to_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/how_to_exercise_video"
        style="@style/start_buttons_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/start_image_height"
        android:layout_marginStart="@dimen/xxl_margin"
        android:layout_marginTop="@dimen/xxl_margin"
        android:layout_marginEnd="@dimen/xxl_margin"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/cd_how_to_exercise"
        android:elevation="@dimen/button_elevation"
        android:text="@string/video_tutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/how_to_exercise" />

    <Button
        android:id="@+id/how_to_app"
        style="@style/start_buttons_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/start_image_height"
        android:layout_marginStart="@dimen/xxl_margin"
        android:layout_marginTop="@dimen/xxl_margin"
        android:layout_marginEnd="@dimen/xxl_margin"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/cd_how_to_app"
        android:elevation="@dimen/button_elevation"
        android:text="@string/how_to_use_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/how_to_exercise_video" />

    <Button
        android:id="@+id/about_us_button"
        style="@style/start_buttons_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_image_height"
        android:layout_marginStart="@dimen/xxl_margin"
        android:layout_marginTop="@dimen/xxl_margin"
        android:layout_marginEnd="@dimen/xxl_margin"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/cd_imprint"
        android:elevation="@dimen/button_elevation"
        android:text="@string/about_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/how_to_app" />

</androidx.constraintlayout.widget.ConstraintLayout>

