<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/exercise_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height">

    <ImageView
        android:id="@+id/iv_drag_drop"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_icon_size"
        android:layout_margin="@dimen/s_margin"
        android:contentDescription="@string/cd_drag"
        android:src="@drawable/ic_six_dots"
        app:layout_constraintBottom_toTopOf="@+id/v_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/middle_grey" />

    <ImageView
        android:id="@+id/iv_exercise_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xxl_margin"
        android:layout_marginTop="@dimen/s_margin"
        android:layout_marginBottom="@dimen/s_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_position_image"
        android:maxWidth="@dimen/thumbnail_height"
        android:maxHeight="@dimen/thumbnail_height"
        app:layout_constraintBottom_toTopOf="@+id/v_separator"
        app:layout_constraintStart_toEndOf="@+id/iv_drag_drop"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_exercise_list_name"
        style="@style/exercise_list_item_text"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="@+id/iv_exercise_thumbnail"
        app:layout_constraintStart_toEndOf="@+id/iv_exercise_thumbnail"
        app:layout_constraintTop_toTopOf="@+id/iv_exercise_thumbnail" />

    <ImageView
        android:id="@+id/iv_more_options"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/delete_icon_size"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_more_options"
        android:src="@drawable/ic_more_vert"
        app:layout_constraintBottom_toTopOf="@+id/v_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_separator"
        android:layout_width="0dp"
        android:layout_height="@dimen/separator_height"
        android:layout_marginStart="@dimen/xxl_margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/xxl_margin"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
